--- a/staff.html
+++ b/staff.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Staff
+title: Authors
 description: Meet our team.
 permalink: /staff/
 menu: true
 ---
 
-<h1>Staff</h1>
+<h1>Authors</h1>
 
 <div class="staff">
   {% for author in site.authors %}
